Hover slack button on css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <title>slack menu for fun</title>
-
   </head>
     <body>
 
       <nav>
           <ul class="menu">
             <li class="logo"><a href="#"><img src="img/slack.png" alt="slack logo"></a></li>
-            <li class="item"><a href="#">Why slack?<i class="fa fa-angle-right twoLine"></i></a>
+            <li class="item"><a href="#" id="whySlack">Why slack?<i class="fa fa-angle-right twoLine"></i></a>
               <div class="subMenu1">
                 <ul>
                   <li class="subItem">Features</li>
@@ -21,6 +20,7 @@
                   <li class="subItem">Customers</li>
                   <li class="subItem">Slack Connect</li>
                 </ul>
+              </div>
             </li>
             <li class="item"><a href="#">Solutions</a></li>
             <li class="item"><a href="#">Ressources<i class="fa fa-angle-right twoLine"></i></a>
